--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
+
 lang:
   nickname:
     en: "English"
     fr: "Français"
+  language:
+    en: "Language"
+    fr: "Langue"
 title:
   en: EyesOfNetwork - Information system supervision solution
   fr: EyesOfNetwork - Solution de supervision du système d'information
@@ -78,13 +82,9 @@ nav-menu:
       name: "Télécharger"
     class: "download"
     url: "#download"
-    
+  
 ##### End of nav-menu #####
 ###########################
-
-
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 markdown: kramdown
