--- a/_data/roadmap/en/2021.yml
+++ b/_data/roadmap/en/2021.yml
@@ -1,22 +1,20 @@
 - title: EON 6.0
   description: -&nbsp;CentOS 8<br>
     -&nbsp;ITSM module v2<br>
-    -&nbsp;Nouveau visuel<br>
-    -&nbsp;Amélioration des performances<br>
-    -&nbsp;Mise à jour majeure de eonapi
+    -&nbsp;New visual<br>
+    -&nbsp;Perf Enhancement<br>
+    -&nbsp;EONAPI update
 
 - title: EOA 3.0
-  description: -&nbsp;Containerisation de la solution
+  description: -&nbsp; creation of Docker image
 
 - title: EOR 3.0
-  description: -&nbsp;Remplacement de la BDD par Elasticsearch<br>
-    -&nbsp;Mise à jour majeur eorweb
+  description: -&nbsp;Replace DB by Elasticsearch<br>
+    -&nbsp;eorweb update
 
 - title: EOI 2.1
-  description: -&nbsp;Interface web d'administration<br>
-    -&nbsp;Modèles par métier
+  description: -&nbsp;Administration WebInterface<br>
+    -&nbsp;Templates by activities
 
-
-- title: EOI 2.1
-  description: -&nbsp;Interface web d'administration<br>
-    -&nbsp;Modèles par métier
+- title: Eyes 3
+  description: -&nbsp;Creation os Full ISO image for all components
